@@ -1,1 +1,1 @@
-wxT("42") 
+wxT("48") 
